--- a/Models/Clustering.ipynb
+++ b/Models/Clustering.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -90,21 +90,149 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -2.27243113e+01,   3.15884734e+00,   1.67635489e+01,\n",
+       "         -7.76274360e+00,  -4.24741989e+00,   3.12706996e+00,\n",
+       "         -3.00774826e-01,  -1.89719880e+01,   1.32046928e+01,\n",
+       "         -2.65111672e+00,  -1.28337085e+00,   7.30120562e+00,\n",
+       "         -1.14935021e+01,   9.95575819e+00,   1.54756424e+01,\n",
+       "          2.38542479e+01,   3.08805091e-01,  -2.25548433e+00,\n",
+       "          4.19068169e+00,  -7.93961476e-01,   8.88184442e+00,\n",
+       "          3.46300524e+00,  -1.62794008e+01,   1.95238548e+01,\n",
+       "          6.48223828e+00,  -2.33322716e+01,  -2.96877056e+00,\n",
+       "         -2.27900090e+01,  -7.46371457e+00,  -9.79422720e-01,\n",
+       "         -4.94871735e+00,  -1.69201326e+01,   2.41673575e+00,\n",
+       "         -2.84968772e+00,   1.74071583e+00,  -1.26773341e+01,\n",
+       "         -4.43039956e+00,   1.33756213e+00,   1.26721923e+01,\n",
+       "          2.35305417e+00,   6.54500089e+00,  -1.15515949e+01,\n",
+       "         -9.63706677e-01,  -1.01531618e+00,   6.55111770e+00,\n",
+       "          1.97846026e+00,  -2.33737653e+01,  -1.64750149e+01,\n",
+       "          1.85245560e+01,  -2.76906812e+00,   9.58384433e+00,\n",
+       "          5.71388351e+00,  -1.99474766e+00,   8.69275856e+00,\n",
+       "          8.19909069e+00,  -1.75319783e+00,  -1.55587661e+01,\n",
+       "          4.27200442e+00,   1.88508727e+01,  -1.02346009e+01,\n",
+       "         -2.73518804e-01,  -3.39783488e+00,  -4.92759007e+00,\n",
+       "         -7.95232710e+00,  -1.01315569e+01,   5.31652705e+00,\n",
+       "         -1.99848083e+01,   1.52429437e-01,   6.74254193e+00,\n",
+       "          9.71443036e-05,  -9.80264132e+00,  -2.03133085e-03,\n",
+       "         -1.68828970e-02,  -9.74796861e+00,   2.88359511e-01,\n",
+       "         -4.85023851e-01,  -3.46809522e+00,  -1.76952587e+00,\n",
+       "          5.57096588e+00,  -1.23773570e+00,  -3.37187648e+00,\n",
+       "          1.41290363e+00,   2.78960960e+00,  -4.72556496e-01,\n",
+       "          2.52255983e+01,  -2.02497545e+00,   1.45956959e+00,\n",
+       "          1.36043654e-03,   2.19639393e-04,  -1.42656973e-02,\n",
+       "         -5.00099403e+01,  -1.04301885e-02,  -4.69322610e+00,\n",
+       "          1.86318300e+00,   1.26344227e-03,  -1.48003255e+00,\n",
+       "          2.06413291e-02,  -1.66947702e-03,  -8.21935193e+00,\n",
+       "          2.02368338e+01,  -4.26427956e+00,   4.27856986e+00,\n",
+       "          5.10101468e+00,  -1.20900269e+01,  -6.21415499e-04,\n",
+       "         -7.62063768e-01,   1.79599562e+00,  -1.49709761e-02],\n",
+       "       [ -8.86015078e+04,   1.50097754e+04,   2.99146216e+03,\n",
+       "          8.73972900e+02,  -2.03412266e+04,   4.85283594e+04,\n",
+       "          2.27281812e+05,   5.30939062e+03,   5.83480713e+03,\n",
+       "         -2.22666094e+04,   0.00000000e+00,   2.28223164e+04,\n",
+       "          8.52141016e+03,   0.00000000e+00,   3.75468652e+03,\n",
+       "          5.18878906e+03,   5.63782324e+03,  -4.36120312e+03,\n",
+       "         -7.89333252e+02,   6.50177930e+03,  -1.68129805e+04,\n",
+       "          7.75400156e+04,   3.46773193e+03,   4.88175312e+04,\n",
+       "         -1.46469055e+03,  -1.40149365e+03,   2.56420781e+04,\n",
+       "         -8.22377930e+03,   0.00000000e+00,   3.06042148e+04,\n",
+       "         -5.02221328e+04,   0.00000000e+00,   3.92532148e+04,\n",
+       "          2.17259297e+04,   3.99845703e+03,  -6.31133906e+04,\n",
+       "          6.86713379e+03,   2.80298730e+03,   6.62154175e+02,\n",
+       "         -1.16384346e+04,   2.09122578e+04,   6.36455225e+03,\n",
+       "          0.00000000e+00,   8.94009844e+04,   1.95634629e+04,\n",
+       "          0.00000000e+00,  -2.81568789e+04,   2.57756953e+04,\n",
+       "         -1.71035840e+03,  -5.52459961e+02,   3.13797070e+04,\n",
+       "         -1.29641592e+04,   5.02126660e+03,   1.21057434e+03,\n",
+       "          7.78599414e+03,  -2.55335648e+02,   2.64114336e+04,\n",
+       "          1.82403809e+04,  -2.76503418e+03,   6.94071777e+03,\n",
+       "          8.00244141e+01,   6.65978125e+03,  -2.34532051e+04,\n",
+       "          7.05203125e+02,  -9.45960938e+02,   2.00483813e+03,\n",
+       "         -6.91147461e+03,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,  -1.48921578e+05,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,  -1.09902344e+01,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "         -4.52495996e+03,  -1.08417969e+01,  -1.33571265e+03,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "         -3.02646641e+04,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "         -5.37109375e-02,   0.00000000e+00,  -1.14912234e+05,\n",
+       "          2.18547578e+04,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   2.05922188e+04,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
+       "       [ -5.43750000e+00,  -2.37574577e-02,   1.22070312e-04,\n",
+       "         -1.58081055e-02,   0.00000000e+00,   2.06700820e+04,\n",
+       "         -3.02890409e-02,  -9.97673161e-03,  -1.01501180e-03,\n",
+       "         -4.59116364e+00,  -2.86102295e-06,   2.50297298e+01,\n",
+       "         -2.32830644e-10,  -1.32976289e+04,   0.00000000e+00,\n",
+       "         -5.12608867e+04,  -4.00475677e+02,  -3.01499939e+01,\n",
+       "         -3.32440723e+03,   4.82399902e+02,   2.65952578e+04,\n",
+       "         -5.31905156e+04,  -4.82399902e+02,   0.00000000e+00,\n",
+       "         -2.65952578e+04,   6.02999878e+01,   0.00000000e+00,\n",
+       "         -7.13121875e+03,   0.00000000e+00,  -4.82399902e+02,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "         -4.82399902e+02,  -1.28152217e+04,   0.00000000e+00,\n",
+       "         -5.04691553e+03,  -3.85919922e+03,  -1.50749969e+01,\n",
+       "          0.00000000e+00,  -6.64881445e+03,   6.40761084e+03,\n",
+       "          0.00000000e+00,  -3.24649143e+00,   1.28152217e+04,\n",
+       "          2.41199951e+02,   2.85248750e+04,   0.00000000e+00,\n",
+       "         -1.20599976e+02,   2.56304434e+04,   6.40761084e+03,\n",
+       "         -1.32976289e+04,   0.00000000e+00,   0.00000000e+00,\n",
+       "         -1.72250452e+03,   3.32440723e+03,   0.00000000e+00,\n",
+       "         -6.02999878e+01,   0.00000000e+00,   0.00000000e+00,\n",
+       "          1.92959961e+03,   0.00000000e+00,   2.56304434e+04,\n",
+       "         -2.41199951e+02,   9.64799805e+02,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   1.28152217e+04,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   1.92959961e+03,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          7.56283569e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   1.37800361e+04,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kmean.cluster_centers_"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "kmean.cluster_centers_"
-   ]
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [python3]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [python3]"
   },
   "language_info": {
    "codemirror_mode": {
