--- a/Models/initial_script2.ipynb
+++ b/Models/initial_script2.ipynb
@@ -103,6 +103,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.08 0.07 1\n",
+      "-0.08 0.0725 1\n",
+      "-0.08 0.075 1\n",
+      "-0.08 0.0775 1\n",
+      "-0.08 0.08 1\n",
+      "-0.0775 0.07 1\n",
+      "-0.0775 0.0725 1\n",
+      "-0.0775 0.075 1\n",
+      "-0.0775 0.0775 1\n",
+      "-0.0775 0.08 1\n",
+      "-0.075 0.07 1\n",
+      "-0.075 0.0725 1\n",
+      "-0.075 0.075 1\n",
+      "-0.075 0.0775 1\n",
+      "-0.075 0.08 1\n",
+      "-0.0725 0.07 1\n",
+      "-0.0725 0.0725 1\n",
+      "-0.0725 0.075 1\n",
+      "-0.0725 0.0775 1\n",
+      "-0.0725 0.08 1\n",
+      "-0.07 0.07 1\n",
+      "-0.07 0.0725 1\n",
+      "-0.07 0.075 1\n",
+      "-0.07 0.0775 1\n",
+      "-0.07 0.08 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=2\n",
+    "x=-.075+np.arange(-n,n+1)/(n)*.005\n",
+    "y=.075+np.arange(-n,n+1)/(n)*.005\n",
+    "def P (x,y,z):\n",
+    "    print(x,y,z)\n",
+    "for i in zip(np.repeat(x,2*n+1),np.tile(y,2*n+1)):\n",
+    "    P(*i,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<zip at 0x114ecaf08>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip(np.repeat(x, 10), np.tile(x,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
