--- a/Models/initial_script.ipynb
+++ b/Models/initial_script.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -232,10 +232,41 @@
     "        pred['y'] = [float(format(x, '.6f')) for x in pred['y']]\n",
     "        o, reward, done, info = env.step(pred)\n",
     "        if done:\n",
-    "            print(\"el fin ...\", info[\"public_score\"])\n",
+    "            print(\"low=\",low_y_cut, \"high=\", high_y_cut,\\\n",
+    "                  \"r=\",info[\"public_score\"])\n",
     "            break\n",
     "#         if o.features.timestamp[0] % 100 == 0:\n",
     "#             print(reward)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jingguo/anaconda/lib/python3.5/site-packages/ipykernel/__main__.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el fin ... 0.0212274000456\n"
+     ]
+    }
+   ],
+   "source": [
+    "fitInitialScript(-0.086093,0.093497)"
    ]
   },
   {
@@ -255,10 +286,21 @@
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "low= -0.085 high= 0.065 r= 0.0209034018658\n"
+     ]
     }
    ],
    "source": [
-    "fitInitialScript(-0.086093,0.093497)"
+    "n=2\n",
+    "x=-.075+np.arange(-n,n+1)/(n)*.01\n",
+    "y=.075+np.arange(-n,n+1)/(n)*.01\n",
+    "for i in [(a,b) for a in x for b in y]:\n",
+    "    fitInitialScript(*i)"
    ]
   },
   {
@@ -268,13 +310,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "n=2\n",
-    "x=-.075+np.arange(-n,n+1)/(n)*.01\n",
-    "y=.075+np.arange(-n,n+1)/(n)*.01\n",
-    "for i in zip(np.repeat(x,2*n+1),np.tile(y,2*n+1)):\n",
-    "    fitInitialScript(*i)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
