--- a/Models/initial_script2.ipynb
+++ b/Models/initial_script2.ipynb
@@ -103,56 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-0.08 0.07 1\n",
-      "-0.08 0.0725 1\n",
-      "-0.08 0.075 1\n",
-      "-0.08 0.0775 1\n",
-      "-0.08 0.08 1\n",
-      "-0.0775 0.07 1\n",
-      "-0.0775 0.0725 1\n",
-      "-0.0775 0.075 1\n",
-      "-0.0775 0.0775 1\n",
-      "-0.0775 0.08 1\n",
-      "-0.075 0.07 1\n",
-      "-0.075 0.0725 1\n",
-      "-0.075 0.075 1\n",
-      "-0.075 0.0775 1\n",
-      "-0.075 0.08 1\n",
-      "-0.0725 0.07 1\n",
-      "-0.0725 0.0725 1\n",
-      "-0.0725 0.075 1\n",
-      "-0.0725 0.0775 1\n",
-      "-0.0725 0.08 1\n",
-      "-0.07 0.07 1\n",
-      "-0.07 0.0725 1\n",
-      "-0.07 0.075 1\n",
-      "-0.07 0.0775 1\n",
-      "-0.07 0.08 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "n=2\n",
-    "x=-.075+np.arange(-n,n+1)/(n)*.005\n",
-    "y=.075+np.arange(-n,n+1)/(n)*.005\n",
-    "def P (x,y,z):\n",
-    "    print(x,y,z)\n",
-    "for i in zip(np.repeat(x,2*n+1),np.tile(y,2*n+1)):\n",
-    "    P(*i,1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -160,16 +111,63 @@
     {
      "data": {
       "text/plain": [
-       "<zip at 0x114ecaf08>"
+       "[(-0.080000000000000002, 0.069999999999999993),\n",
+       " (-0.080000000000000002, 0.072499999999999995),\n",
+       " (-0.080000000000000002, 0.074999999999999997),\n",
+       " (-0.080000000000000002, 0.077499999999999999),\n",
+       " (-0.080000000000000002, 0.080000000000000002),\n",
+       " (-0.077499999999999999, 0.069999999999999993),\n",
+       " (-0.077499999999999999, 0.072499999999999995),\n",
+       " (-0.077499999999999999, 0.074999999999999997),\n",
+       " (-0.077499999999999999, 0.077499999999999999),\n",
+       " (-0.077499999999999999, 0.080000000000000002),\n",
+       " (-0.074999999999999997, 0.069999999999999993),\n",
+       " (-0.074999999999999997, 0.072499999999999995),\n",
+       " (-0.074999999999999997, 0.074999999999999997),\n",
+       " (-0.074999999999999997, 0.077499999999999999),\n",
+       " (-0.074999999999999997, 0.080000000000000002),\n",
+       " (-0.072499999999999995, 0.069999999999999993),\n",
+       " (-0.072499999999999995, 0.072499999999999995),\n",
+       " (-0.072499999999999995, 0.074999999999999997),\n",
+       " (-0.072499999999999995, 0.077499999999999999),\n",
+       " (-0.072499999999999995, 0.080000000000000002),\n",
+       " (-0.069999999999999993, 0.069999999999999993),\n",
+       " (-0.069999999999999993, 0.072499999999999995),\n",
+       " (-0.069999999999999993, 0.074999999999999997),\n",
+       " (-0.069999999999999993, 0.077499999999999999),\n",
+       " (-0.069999999999999993, 0.080000000000000002)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "zip(np.repeat(x, 10), np.tile(x,10))"
+    "[(a,b) for a in x for b in y]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-0.08  , -0.0775, -0.075 , -0.0725, -0.07  ]),\n",
+       " array([ 0.07  ,  0.0725,  0.075 ,  0.0775,  0.08  ]))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x,y"
    ]
   },
   {
